--- a/ajax_pagination.html
+++ b/ajax_pagination.html
@@ -104,7 +104,7 @@
             var pages = document.getElementById('pages');
             
             pages.innerHTML += `
-        <li class="page-item" id>
+        <li class="page-item" id = "prev">
             <a class="page-link" href="#" onclick="return navPrevNext('p')">Previous</a>
         </li>
         `;
@@ -118,7 +118,7 @@
             }
 
             pages.innerHTML += `
-        <li class="page-item">
+        <li class="page-item" id = "next">
             <a class="page-link" href="#" onclick="return navPrevNext('n')">Next</a>
         </li>
         `;
@@ -129,14 +129,11 @@
             if (option == 'p') {
                 selectedPage--;
             }
-            else if(option == 1){
-                selectedPage = 1;
-            }
-            else if(option == 2){
-                selectedPage = 2;
-            }
-            else {
+            else if(option == 'n'){
                 selectedPage++;
+            }
+            else{
+                selectedPage = option;
             }
 
             getData();
