--- a/ajax_pagination.html
+++ b/ajax_pagination.html
@@ -147,7 +147,7 @@
             var prev = document.getElementById('prev');
             var next = document.getElementById('next');
            // console.log(selectedPage, total);
-            if(selectedPage == 1){
+            if(selectedPage === 1){
                prev.style.display = 'none';
                 //prev.classList.add('disabled')
             }
